syntax = "proto3";

package toServerSubscribe;

import "reCtx/reCtx.proto";

option go_package = "netsvr/internal/protocol/toServer/reqTopicsConnCount;reqTopicsConnCount";

//获取网关中的某几个主题的连接数
message ReqTopicsConnCount {
  //请求上下文，网关会原样回传给工作进程
  reCtx.ReCtx reCtx = 1;
  //主题集合
  repeated string topics = 2;
  //是否返回全部主题的连接数，如果设置为true，则网关会忽略topics字段的值
  //如果主题数量太多，比如有上万个，则有可能导致网关反应变慢，或者是返回的时候，tcp包太大
  bool getAll = 3;
}